# JEPA_2022_IMPLEMENTATIONS

./: .gitignore  main.py  pyproject.toml  test.py
experiments/step01_ebm/: model.py  train.py  visualize.py
experiments/step01_ebm/outputs/: checkpoint.pt  explanation.md  loss_history.json
experiments/step02_contrastive_ebm/: model.py  train.py  visualize.py
experiments/step02_contrastive_ebm/outputs/: checkpoint.pt  explanation.md  loss_history.json
experiments/step03_joint_embedding/: __init__.py  model.py  train.py  visualize.py
experiments/step03_joint_embedding/outputs/: checkpoint.pt  checkpoint_distance.pt  checkpoint_info_nce.pt  explanation.md  loss_history.json  loss_history_distance.json  loss_history_info_nce.json
experiments/step04_non_contrastive/: __init__.py  model.py  train.py  visualize.py
experiments/step04_non_contrastive/outputs/: explanation.md  loss_history.json
experiments/step05_jepa/: model.py  train.py  visualize.py
experiments/step05_jepa/outputs/: checkpoint.pt  explanation.md  linear_probe_results.json  loss_history.json
experiments/step06_Moving_MNIST_JEPA/: linear_probe.py  mlp_probe.py  model.py  projector_probe.py  train.py  visualize.py
experiments/step06_latent_var_JEPA/: model.py  train.py  visualize.py  walkthrough.md
experiments/step06_stochastic_latent_jepa/: linear_probe.py  model.py  train.py  visualize.py
misc/: JEPA_2022_PLAN_GPU.md
shared/: __init__.py  data.py  device.py  modules.py  viz.py
skills/build-toy-model/: SKILL.md  explanation-template.md  steps-reference.md
(+5 files in other folders)
