[project]
name = "jepa-2022"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "minigrid>=2.3.1",
    "tqdm>=4.65",
    "scikit-learn>=1.3",
    "graphifyy[mcp]>=0.8.18",
    "openai>=2.38.0",
    "umap-learn>=0.5.12",
]
